Issue #36 - Known problems with twitter button on Firefox, just rolled out my own link/image

--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -61,11 +61,16 @@ ul.videos li:last-child span {
   background: url("/static/img/video-play-bottom-na.png") no-repeat top left;
 }
 
-a.twitter-follow-button {
-  right: 50px;
-}
-
 #footer {
   bottom: 0;
   height: 40px;
+}
+
+#footer img {
+  vertical-align: middle;
+}
+
+#footer a {
+  color: #000;
+  font-size: smaller;
 }
